--- a/requirements.txt
+++ b/requirements.txt
@@ -1,85 +1,65 @@
-alembic==1.4.3
+alembic==1.5.8
 aniso8601==6.0.0
 appdirs==1.4.4
-asgiref==3.2.7
-atomicwrites==1.4.0
-attrs==19.3.0
-Authlib==0.15.2
-awscli==1.18.112
-Babel==2.8.0
-botocore==1.17.35
-certifi==2020.6.20
-cffi==1.14.0
-chardet==3.0.4
+astroid==2.2.5
+backcall==0.2.0
+brew==0.1.3
+cffi==1.14.6
 Click==7.0
-colorama==0.4.3
-cryptography==3.0
-DateTime==4.3
-Deprecated==1.2.13
-distlib==0.3.0
-Django==3.0.7
-docutils==0.15.2
-ecdsa==0.15
+colorama==0.4.4
+cryptography==35.0.0
+decorator==5.0.6
+distlib==0.3.1
+ecdsa==0.13.2
 filelock==3.0.12
-Flask==1.1.2
-Flask-Authlib-Client==0.0.1
-Flask-Cors==3.0.7
-Flask-Migrate==2.5.3
-Flask-Moment==0.10.0
+Flask==1.0.2
+Flask-Cors==3.0.8
+Flask-Migrate==2.7.0
 Flask-RESTful==0.3.7
-Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.0
-Flask-Testing==0.8.1
-Flask-WTF==0.14.3
-future==0.18.2
-greenlet==1.1.0
-gunicorn==20.0.4
-idna==2.10
-importlib-metadata==4.0.1
+future==0.17.1
+greenlet==1.0.0
+importlib-metadata==4.0.0
+ipykernel==5.5.3
+ipython==7.22.0
+ipython-genutils==0.2.0
+isort==4.3.18
 itsdangerous==1.1.0
+jedi==0.18.0
 Jinja2==2.10.1
-jmespath==0.10.0
-jose==1.0.0
-jwcrypto==1.0
-jwt==1.3.0
-linecache2==1.0.0
-Mako==1.1.3
+jupyter-client==6.1.12
+jupyter-core==4.7.1
+lazy-object-proxy==1.4.0
+Mako==1.1.4
 MarkupSafe==1.1.1
-more-itertools==8.4.0
-oauth==1.0.1
-packaging==20.4
-pluggy==0.13.1
+mccabe==0.6.1
+parso==0.8.2
+pickleshare==0.7.5
+postgres==3.0.0
+prompt-toolkit==3.0.18
+psycopg2==2.8.6
 psycopg2-binary==2.8.2
-py==1.9.0
-pyasn1==0.4.8
+psycopg2-pool==1.1
+pycodestyle==2.7.0
 pycparser==2.20
-pycryptodome==3.6.6
-PyJWT==1.7.1
-pyparsing==2.4.7
-pytest==5.4.3
+pycryptodome==3.3.1
+Pygments==2.8.1
+pylint==2.3.1
 python-dateutil==2.8.1
 python-dotenv==0.19.0
 python-editor==1.0.4
-python-jose==3.1.0
 python-jose-cryptodome==1.3.2
-python-jwt==3.3.0
 pytz==2019.1
-PyYAML==5.3.1
-requests==2.24.0
-rsa==4.5
-s3transfer==0.3.3
-simplejson==3.17.2
+pywin32==300
+pyzmq==22.0.3
 six==1.12.0
 SQLAlchemy==1.3.4
-sqlparse==0.3.1
-traceback2==1.4.0
-typing-extensions==3.10.0.0
-unittest2==1.1.0
-urllib3==1.25.10
-virtualenv==20.0.23
+tornado==6.1
+traitlets==5.0.5
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
+virtualenv==20.4.6
 wcwidth==0.2.5
-Werkzeug==1.0.1
-wrapt==1.12.1
-WTForms==2.3.3
+Werkzeug==0.15.4
+wrapt==1.11.1
 zipp==3.4.1
-zope.interface==5.1.0
