--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.0
 future==0.17.1
 greenlet==1.0.0
+gunicorn==20.0.4
 importlib-metadata==4.0.0
 ipykernel==5.5.3
 ipython==7.22.0
