--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ python-dateutil==2.8.1
 python-dotenv==0.19.0
 python-editor==1.0.4
 python-jose-cryptodome==1.3.2
+pytz==2019.3
 pyzmq==22.0.3
 six==1.12.0
 SQLAlchemy==1.3.4
