--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ filelock==3.0.12
 Flask==1.0.2
 Flask-Cors==3.0.8
 Flask-Migrate==2.7.0
+flask-moment==1.0.2
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.0
 future==0.17.1
