--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Flask-Migrate==2.7.0
 flask-moment==1.0.2
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.0
+flask_wtf==0.15.1
 future==0.17.1
 greenlet==1.0.0
 gunicorn==20.0.4
@@ -64,4 +65,5 @@ virtualenv==20.4.6
 wcwidth==0.2.5
 Werkzeug==0.15.4
 wrapt==1.11.1
+WTFForms==2.3.3
 zipp==3.4.1
