--- a/requirements.txt
+++ b/requirements.txt
@@ -56,6 +56,7 @@ python-editor==1.0.4
 python-jose-cryptodome==1.3.2
 pytz==2019.3
 pyzmq==22.0.3
+requests==2.26.0
 six==1.12.0
 SQLAlchemy==1.3.4
 tornado==6.1
