--- a/requirements.txt
+++ b/requirements.txt
@@ -1,70 +1,34 @@
-alembic==1.5.8
-aniso8601==6.0.0
-appdirs==1.4.4
 astroid==2.2.5
-authlib==0.15.4
-babel==2.9.1
-backcall==0.2.0
-brew==0.1.3
-cffi==1.14.6
 Click==7.0
-colorama==0.4.4
-cryptography==35.0.0
-decorator==5.0.6
-distlib==0.3.1
 ecdsa==0.13.2
-filelock==3.0.12
 Flask==1.0.2
-Flask-Cors==3.0.8
-Flask-Migrate==2.7.0
-flask-moment==1.0.2
-Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.0
-flask_wtf==0.15.1
 future==0.17.1
-greenlet==1.0.0
-gunicorn==20.0.4
-importlib-metadata==4.0.0
-ipykernel==5.5.3
-ipython==7.22.0
-ipython-genutils==0.2.0
 isort==4.3.18
 itsdangerous==1.1.0
-jedi==0.18.0
 Jinja2==2.10.1
-jupyter-client==6.1.12
-jupyter-core==4.7.1
 lazy-object-proxy==1.4.0
-Mako==1.1.4
 MarkupSafe==1.1.1
 mccabe==0.6.1
-parso==0.8.2
-pickleshare==0.7.5
-postgres==3.0.0
-prompt-toolkit==3.0.18
-psycopg2==2.8.6
-psycopg2-binary==2.8.2
-psycopg2-pool==1.1
-pycodestyle==2.7.0
-pycparser==2.20
 pycryptodome==3.3.1
-Pygments==2.8.1
 pylint==2.3.1
-python-dateutil==2.8.1
-python-dotenv==0.19.0
-python-editor==1.0.4
 python-jose-cryptodome==1.3.2
-pytz==2019.3
-pyzmq==22.0.3
-requests==2.26.0
 six==1.12.0
-SQLAlchemy==1.3.4
-tornado==6.1
-traitlets==5.0.5
 typed-ast==1.4.2
-typing-extensions==3.7.4.3
-virtualenv==20.4.6
-wcwidth==0.2.5
 Werkzeug==0.15.4
 wrapt==1.11.1
-zipp==3.4.1
+Flask-Cors==3.0.8
+SQLAlchemy==1.3.4
+psycopg2-binary==2.8.2
+python-dotenv==0.19.0
+aniso8601==6.0.0
+Flask==1.0.3
+Flask-Cors==3.0.7
+Flask-RESTful==0.3.7
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+psycopg2-binary==2.8.2
+pytz==2019.1
+six==1.12.0
+SQLAlchemy==1.3.4
+Werkzeug==0.15.5
