--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ python-dotenv==0.19.0
 aniso8601==6.0.0
 Flask==1.0.3
 Flask-RESTful==0.3.7
-Flask_migrate==1.12.0
+flask_migrate==1.12.0
 flask_script==2.0.6
 Jinja2==2.10.1
 MarkupSafe==1.1.1
