--- a/requirements.txt
+++ b/requirements.txt
@@ -21,8 +21,9 @@ psycopg2-binary==2.8.2
 python-dotenv==0.19.0
 aniso8601==6.0.0
 Flask==1.0.3
+Flask-Cors==3.0.8
 Flask-RESTful==0.3.7
-flask_migrate==1.12.0
+flask_migrate==2.5.3
 flask_script==2.0.6
 Jinja2==2.10.1
 MarkupSafe==1.1.1
