--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Click==7.0
 ecdsa==0.13.2
 Flask-SQLAlchemy==2.4.0
 future==0.17.1
+gunicorn==20.0.4
 isort==4.3.18
 itsdangerous==1.1.0
 Jinja2==2.10.1
