--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ Flask==2.0.2
 Flask-Cors==3.0.10
 Flask-RESTful==0.3.9
 flask_migrate==3.1.0
+flask_moment==1.0.2
 flask_script==2.0.6
 Jinja2==3.0.2
 MarkupSafe==2.0.1
