--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ Flask-RESTful==0.3.9
 flask_migrate==3.1.0
 flask_moment==1.0.2
 flask_script==2.0.6
+flask_WTF==0.15.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
 pytz==2021.3
