--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ flask_moment==1.0.2
 flask_script==2.0.6
 flask_WTF==0.15.1
 Jinja2==3.0.2
+requests==2.26.0
 MarkupSafe==2.0.1
 pytz==2021.3
 Werkzeug==2.0.2
