--- a/requirements.txt
+++ b/requirements.txt
@@ -20,8 +20,7 @@ typed-ast==1.4.3
 wrapt==1.13.1
 Flask-Cors==3.0.10
 SQLAlchemy==1.4.25
-pyscopg2==2.9.1
-psycopg2-binary==2.9.1
+psycopg2-binary==3.0b1
 python-dotenv==0.19.0
 aniso8601==9.0.1
 Flask==2.0.2
